project('svr4utils', 'c')

executable('ping', 'svr4_ping.c', install : true, install_dir : '/usr/bin')
executable('mcookie', 'mcookie.c', install : true, install_dir : '/usr/bin')
executable('dbgwrite', 'dbgwrite.c', install : true, install_dir : '/usr/bin')
executable('init', 'init.c', install : true, install_dir : '/usr/sbin')

install_man('mcookie.1')
